fix(overlay-trigger): Wraps contents of overlay trigger in a span
Wraps the tooltip trigger in a span styled as a link with prepending
space to create the link styling.

--- a/src/pivotal-ui/components/tooltips/tooltips.scss
+++ b/src/pivotal-ui/components/tooltips/tooltips.scss
@@ -89,3 +89,18 @@ $('#disabled-button-with-tooltip').tooltip();
 .button-with-tooltip-wrapper {
   display: inline-block;
 }
+
+.overlay-trigger {
+  color: $link-color;
+  @include transition-pui();
+
+  &:hover, &:focus {
+    cursor: pointer;
+    text-decoration: none;
+    color: lighten($link-color, 6%);
+  }
+
+  &:active, &.active{
+    color: darken($link-color, 6%);
+  }
+}
